--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js"
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^1.0.0",
     "@discordjs/rest": "^1.4.0",
-    "discord.js": "^14.0.3"
+    "ascii-table": "^0.0.9",
+    "discord.js": "^14.0.3",
+    "glob": "^8.0.3",
+    "lodash": "^4.17.21"
   },
   "type": "module",
   "devDependencies": {
