--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/rest": "^1.4.0",
+    "@discordjs/voice": "^0.16.0",
+    "@distube/spotify": "^1.5.1",
+    "@distube/yt-dlp": "^1.1.3",
     "ascii-table": "^0.0.9",
+    "chalk": "^5.2.0",
     "discord.js": "^14.0.3",
+    "distube": "^4.0.4",
+    "dotenv": "^16.0.3",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^4.4.1",
     "glob": "^8.0.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "sodium": "^3.0.2"
   },
   "type": "module",
   "devDependencies": {
-    "dotenv": "^16.0.3",
     "nodemon": "^2.0.19"
   }
 }
