--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@discordjs/voice": "^0.16.0",
     "@distube/spotify": "^1.5.1",
     "@distube/yt-dlp": "^1.1.3",
+    "@distube/ytdl-core": "^4.11.10",
     "ascii-table": "^0.0.9",
     "chalk": "^5.2.0",
     "discord.js": "^14.0.3",
@@ -26,6 +27,7 @@
     "ffmpeg-static": "^4.4.1",
     "glob": "^8.0.3",
     "lodash": "^4.17.21",
+    "opusscript": "^0.0.8",
     "sodium": "^3.0.2"
   },
   "type": "module",
